--- a/style.css
+++ b/style.css
@@ -21,3 +21,86 @@ h1{
     max-width: 1200px;
     padding: 20px; 
 }
+
+.recipe-list{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.recipe-item{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.recipe-item img{
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+}
+
+.recipe-item h2{
+    margin: 0;
+    font-size: 20px;
+    padding: 10px;
+    min-height: 200px;
+}
+
+.recipe-item p{
+    margin: 0;
+    padding: 10px;
+    color: #777;
+}
+
+.recipe-item a{
+    background: #0c2461;
+    color: #fff;
+    min-width: 150px;
+    padding: 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 14px;
+    transition: background-color .3s ease;
+}
+
+.recipe-item a:hover{
+    background: #1e3799;
+}
+
+@media screen and (max-width: 768px){
+    .container{
+        max-width: 90%;
+    }
+
+    .recipe-item{
+        flex-direction: column;
+    }
+
+    .recipe-item img{
+        width: 100%;
+        height: auto;
+        margin-bottom: 10px;
+    }
+
+    .recipe-item h2{
+        font-size: 20px;
+        padding: 0;
+        margin-bottom: 10px;
+        text-align: start;
+    }
+
+    .recipe-item p{
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+
+    .recipe-item a{
+        width: 100%;
+        text-align: center;
+    }
+}
