--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ h1{
 
 .container{
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 1100px;
     padding: 20px; 
 }
 
@@ -49,6 +49,7 @@ h1{
     font-size: 20px;
     padding: 10px;
     min-height: 200px;
+    min-width: 200px;
 }
 
 .recipe-item p{
@@ -90,8 +91,8 @@ h1{
     .recipe-item h2{
         font-size: 20px;
         padding: 0;
-        margin-bottom: 10px;
-        text-align: start;
+        margin-bottom: -150px;
+        text-align: center;
     }
 
     .recipe-item p{
